Endereco service and integration tests.